# MaratronVR

./: .gitignore  README.md
.clinerules/: overall_rules.md  writing_style.md
app/: main.py  profiles.json  requirements.txt
app/backends/: base.py  factory.py  hidmaestro_backend.py  steamvr_client.py  uinput_backend.py
app/core/: calibration.py  curve.py  device_scan.py  driver_install.py  health.py  profiles.py  strava_client.py  treadmill_reader.py
app/gui/: curve_widget.py  main_window.py  style.qss  treadmill_widget.py
backends/MaratronBridge/: MaratronBridge.csproj  Program.cs
backends/native-steamvr/: CMakeLists.txt  driver.vrdrivermanifest  driver_main.cpp  maratron_device.cpp  maratron_device.h  maratron_server.cpp  maratron_server.h  udp_receiver.cpp  udp_receiver.h  watchdog.cpp  watchdog.h
backends/native-steamvr/resources/input/: legacy_bindings_vive_controller.json  maratron_profile.json
backends/native-steamvr/resources/settings/: default.vrsettings
docs/: handoff.json
